traefik/kb-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kb
spec:
  entryPoints:
#    - web
    - websecure
  routes:
  - match: Host(`dashboard.12345.ccom`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
  tls:
    secretName: ssl
#    certResolver: myresolver
